# cv-parser

./: .gitignore  0_get_files.ipynb  1_read_cv.ipynb  2_read_study_plan.ipynb  pyproject.toml
