[project]
name = "cv-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.74.0",
    "gspread>=6.1.4",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.9",
    "langchain-google-vertexai>=2.0.8",
    "langchain>=0.3.9",
    "llama-index-llms-gemini>=0.4.0",
    "llama-index-llms-ollama>=0.4.2",
    "llama-index-llms-vertex>=0.4.1",
    "llama-index>=0.12.2",
    "oauth2client>=4.1.3",
    "ollama>=0.4.2",
    "polars>=1.16.0",
    "pydantic[email]>=2.9.2",
    "pydrive2>=1.21.3",
    "pymupdf>=1.24.14",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
]
